Project_9/debug_test_process.txt
1. Ran buggy.py and recieved this error:
 File "/home/parker/CSFall2017Projects/Project_9/buggy.py", line 31
    print("Overall there were ", (count/countAll),"  yes votes")
        ^
SyntaxError: invalid syntax

2. At line 30 added a missing end parentheses to function call.

3.Fixed error in not_buggy.py then ran not_buggy.py
  Recieve this error message:
  FileNotFoundError: [Errno 2] No such file or directory: 'voting.txt'

4. Line 11. Input file name was voting.txt but the actual file is votes.txt.

5. Fixed input file name to "votes.txt" in not_buggy.py and ran it.
   Recieved this error message:
   NameError: name 'lines' is not defined

6. Noticed on line 13 that lines was the variable named used but Lines was
   the actual name of the variable.

7. Fixed name error on not_buggy.py and ran code again
   Recieved this error message:
   Traceback (most recent call last):
  File "not_buggy.py", line 34, in <module>
    main()
  File "not_buggy.py", line 13, in main
    Lines = Lines.split()
AttributeError: 'list' object has no attribute 'split'

8. At line 13. Lines.split() is called but split() method is not defined 
   on a list of strings.

9. Removed unnecessary split() call from line 13 in not_buggy.py. Ran code again.
   Recieved this error message:
   Traceback (most recent call last):
  File "not_buggy.py", line 33, in <module>
    main()
  File "not_buggy.py", line 18, in main
    line = lines[m].split()
NameError: name 'lines' is not defined

10. On line 18 lines is not the correct name for the variable. It is Lines

11. Corrected lines to Lines in not_buggy.py and ran code again.
    Recieved this error message:
    Traceback (most recent call last):
  File "not_buggy.py", line 33, in <module>
    main()
  File "not_buggy.py", line 28, in main
    print("percentage:" + (str(count / countAl)))
NameError: name 'countAl' is not defined

12. On line 28 the name countAl is referenced but the correct name is countAll.

13. Changed countAl to countAll in not_buggy.py and ran code again.
    Recieved this output:
    percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
percentage:0.0
Overall there were  0.0   yes votes

14. Added temp. print statement in not_buggy.py after the assignment to line. 
    Ran code again.
    Recieved this output:
    ['Aberdeenshire']
percentage:0.0
['yyynnnnynynyannnynynanynaanyna']
percentage:0.0
['Midlothian']
percentage:0.0
['nnnnynyynyanyaanynyanynnnanyna']
percentage:0.0
['Berwickshire']
percentage:0.0
['nnnnnnnnnnnnnnnnnnnnynnnnnynnnnny']
percentage:0.0
['Dunbartonshire']
percentage:0.0
['nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna']
percentage:0.0
['Fife']
percentage:0.0
['aanynynynanyyynaaaanynynayynyynnnanynyn']
percentage:0.0
['Lanarkshire']
percentage:0.0
['nnyynynnnyyyyyyyyyyyyyayyYYY']
percentage:0.0
['East', 'Lothian']
percentage:0.0
['nynynaaynynynnnnyyyAayyyynnnnnnnyannynyn']
percentage:0.0
['Ayrshire']
percentage:0.0
['ynyyyyynyyyyyyay']
percentage:0.0
Overall there were  0.0   yes votes

15. Noticed that the split statement in the assingment of line is 
    unnecessary. Removed split() call in not_buggy.py.
    Recieved this output:
    Aberdeenshire

percentage:0.0
yyynnnnynynyannnynynanynaanyna

percentage:0.2222222222222222
Midlothian

percentage:0.17857142857142858
nnnnynyynyanyaanynyanynnnanyna

percentage:0.21839080459770116
Berwickshire

percentage:0.19
nnnnnnnnnnnnnnnnnnnnynnnnnynnnnny

percentage:0.16417910447761194
Dunbartonshire

percentage:0.1476510067114094
nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna

percentage:0.24083769633507854
Fife

percentage:0.23469387755102042
aanynynynanyyynaaaanynynayynyynnnanynyn

percentage:0.2542372881355932
Lanarkshire

percentage:0.24193548387096775
nnyynynnnyyyyyyyyyyyyyayyYYY

percentage:0.2815884476534296
East Lothian

percentage:0.2689655172413793
nynynaaynynynnnnyyyAayyyynnnnnnnyannynyn

percentage:0.2809667673716012
Ayrshire

percentage:0.27647058823529413
ynyyyyynyyyyyyay

percentage:0.29971988795518206
Overall there were  0.29971988795518206   yes votes

16. Removed temp. print statement. Noticed that the spec input file
    has each shire name begin with a capital letter. Added to if-else
    branch to accomodate this case. 
    if v.isupper():
        print(line + ": ", end="")

17. Ran code and recieved this output:
    Aberdeenshire
: percentage:0.0
percentage:0.22727272727272727
Midlothian
: percentage:0.18518518518518517
percentage:0.2235294117647059
Berwickshire
: percentage:0.1958762886597938
percentage:0.16793893129770993
Dunbartonshire
: percentage:0.15172413793103448
nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna
: nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna
: nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna
: percentage:0.25
Fife
: percentage:0.24468085106382978
percentage:0.2631578947368421
Lanarkshire
: percentage:0.2510460251046025
nnyynynnnyyyyyyyyyyyyyayyYYY
: nnyynynnnyyyyyyyyyyyyyayyYYY
: nnyynynnnyyyyyyyyyyyyyayyYYY
: percentage:0.2943396226415094
East Lothian
: East Lothian
: percentage:0.2826086956521739
nynynaaynynynnnnyyyAayyyynnnnnnnyannynyn
: percentage:0.29430379746835444
Ayrshire
: percentage:0.29012345679012347
percentage:0.31378299120234604
Overall there were  0.31378299120234604   yes votes

18. Need a call to strip on line for the print statement.
    Called strip() on line in the print statement in not_buggy.py.
    Ran code again
    Recieved this output:
    Aberdeenshire: percentage:0.0
percentage:0.22727272727272727
Midlothian: percentage:0.18518518518518517
percentage:0.2235294117647059
Berwickshire: percentage:0.1958762886597938
percentage:0.16793893129770993
Dunbartonshire: percentage:0.15172413793103448
nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna: nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna: nyyyyynyyNyyyyynynynyyYYnynynynyyynanyyna: percentage:0.25
Fife: percentage:0.24468085106382978
percentage:0.2631578947368421
Lanarkshire: percentage:0.2510460251046025
nnyynynnnyyyyyyyyyyyyyayyYYY: nnyynynnnyyyyyyyyyyyyyayyYYY: nnyynynnnyyyyyyyyyyyyyayyYYY: percentage:0.2943396226415094
East Lothian: East Lothian: percentage:0.2826086956521739
nynynaaynynynnnnyyyAayyyynnnnnnnyannynyn: percentage:0.29430379746835444
Ayrshire: percentage:0.29012345679012347
percentage:0.31378299120234604
Overall there were  0.31378299120234604   yes votes

19. Removed unnecessary "precentage" in print statement. Realized that counts needed to be competed with the len of the line.


